<resources>
    <string name="app_name">STPs</string>
    <string name="sign_up">회원가입</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="email">이메일</string>
    <string name="login_with_google">SIGN IN WITH</string>
    <string name="email_hint">이메일을 입력해주세요.</string>
    <string name="pw_hint">비밀번호(8자리 이상)</string>
    <string name="found_pw">비밀번호를 잊어버리셨나요?</string>
    <string name="text">등록하신 이메일로 비밀번호를 변경할 수 있는 링크를 보내드립니다.</string>
    <string name="send_email">비밀번호 재설정 메일 전송</string>
    <string name="pw">비밀번호</string>
    <string name="before">이전</string>
    <string name="next">다음</string>
    <string name="enter_phone_number">핸드폰번호(\-\없이 입력)</string>
    <string name="enter_certification_number">인증번호 입력</string>
    <string name="join">가입하기</string>
    <string name="confirm_pw">비밀번호 확인</string>
    <string name="pw2">비밀번호(8자리 이상)</string>
    <string name="birthday">생일</string>
    <string name="login">로그인</string>
    <string name="name">이름</string>
    <string name="phone_number">전화번호</string>
    <string name="photo">포토</string>
    <string name="album">앨범</string>
    <string name="map">지도</string>
    <string name="user">내정보</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="url">http://172.30.1.30:8000</string>
</resources>
